--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -4,7 +4,7 @@
 
 .url-converter {
   height: 100vh;
-  background-image: image_url('hero_img.jpg');
+  background-image: image_url('hero_img.png');
   background-size: 100% 100%;
 }
 
