making the homepage pretty

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,8 +6,8 @@
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-  %header
-    = render partial: 'layouts/header'
   %body
-    .text-center
+    %header
+      = render partial: 'layouts/header'
+    .main.text-center
       = yield
