--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -1,18 +1,38 @@
+html,body {
+  height:100%;
+  width: 100%;
+}
+
+.main {
+  height: 100%;
+  width: 100%;
+}
+
 .navbar {
+  width: 100%;
   border-bottom: 1px solid black;
+  background-color: #F4F4F4;
+  -webkit-box-shadow: 0 4px 3px -1px black;
+     -moz-box-shadow: 0 4px 3px -1px black;
+          box-shadow: 0 4px 3px -1px black;
 }
 
 .url-converter {
-  height: 100vh;
-  background-image: image_url('hero_img.png');
+  height: 100%;
+  width: 100%;
+  background: image_url('hero_img.png')no-repeat center fixed;
   background-size: 100% 100%;
 }
 
 #url-form {
-  margin-top: 50%;
+  padding-top: 50%;
 }
 
 .form-control {
   width: 75%;
   margin: auto;
+}
+
+.nav-link {
+  color: black;
 }
