--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,6 +1,6 @@
 %nav.navbar.navbar-toggleable-md
-  = link_to ">>UrlShortener<<", root_path, class: 'navbar-brand'
+  = link_to ">>UrlShortener<<", root_path, class: 'navbar-brand nav-link'
   .collapse.navbar-collapse
     .navbar-nav.ml-auto
-      = link_to 'Top 100', urls_path
+      = link_to 'Top 100', urls_path, class: 'nav-link'
 
