--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -36,3 +36,9 @@ html,body {
 .nav-link {
   color: black;
 }
+
+#shortened-container {
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+}
