--- a/app/views/urls/new.html.haml
+++ b/app/views/urls/new.html.haml
@@ -8,6 +8,8 @@
           = f.text_field :original, class: 'form-control'
         %p
           = f.submit 'Shorten My Url!', class: 'btn btn-primary', id: 'create-button'
-    %div
-      %p Your new shortened url:
-      %span#shortened
+    %a{:href => "#", 'data-toggle' => 'collapse'}
+    .collapse#shortened-container
+      %p
+        Your new shortened url:
+        %span#shortened
