--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -1,3 +1,4 @@
+// homepage
 html,body {
   height:100%;
   width: 100%;
@@ -41,4 +42,10 @@ html,body {
   background-color: white;
   border: 1px solid black;
   border-radius: 10px;
+}
+
+// index page
+
+.container {
+  margin-top: 5%;
 }
