--- a/app/views/urls/new.html.haml
+++ b/app/views/urls/new.html.haml
@@ -10,6 +10,4 @@
           = f.submit 'Shorten My Url!', class: 'btn btn-primary', id: 'create-button'
     %a{:href => "#", 'data-toggle' => 'collapse'}
     .collapse#shortened-container
-      %p
-        Your new shortened url:
-        %span#shortened
+      %p#shortened
