--- a/app/views/urls/index.html.haml
+++ b/app/views/urls/index.html.haml
@@ -1,7 +1,7 @@
 .container
   .row
     .col-md-4.offset-md-4
-      %h3 Look At All These Urls!
+      %h3 Top 100 Requested URL's
 
   .row
     .col-md-1.offset-md-1
@@ -19,7 +19,7 @@
     - original_url  = format_url url.original
     .row.url
       .col-md-1.offset-md-1
-        = idx
+        = idx + 1
       .col-md-4
         %span
           %a{:href => original_url}
