added code for footer partial, added fixed-top for navbar

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-toggleable-md
+%nav.navbar.navbar-toggleable-md.fixed-top
   = link_to ">>UrlShortener<<", root_path, class: 'navbar-brand nav-link'
   .collapse.navbar-collapse
     .navbar-nav.ml-auto
