--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,3 +13,5 @@
       = render partial: 'layouts/header'
     .main.text-center
       = yield
+    %footer
+      = render partial: 'layouts/footer'
