--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -1,12 +1,7 @@
-// homepage
-html,body {
-  height:100%;
-  width: 100%;
-}
+// navbar
 
-.main {
-  height: 100%;
-  width: 100%;
+.nav-link {
+  color: black;
 }
 
 .navbar {
@@ -16,6 +11,27 @@ html,body {
   -webkit-box-shadow: 0 4px 3px -1px black;
      -moz-box-shadow: 0 4px 3px -1px black;
           box-shadow: 0 4px 3px -1px black;
+}
+
+// footer
+
+.footer {
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+
+}
+
+// homepage
+html,body {
+  height:100%;
+  width: 100%;
+}
+
+.main {
+  height: 100%;
+  width: 100%;
 }
 
 .url-converter {
@@ -32,10 +48,6 @@ html,body {
 .form-control {
   width: 75%;
   margin: auto;
-}
-
-.nav-link {
-  color: black;
 }
 
 #shortened-container {
