added copy button to list view

--- a/app/views/urls/index.html.haml
+++ b/app/views/urls/index.html.haml
@@ -27,6 +27,9 @@
       .col-md-3
         %span
           = link_to shortened_url, shortened_url
+        %span
+          %a{:href => shortened_url, onclick: 'copyToClipboard(event)'}
+            %i.fa.fa-copy
       .col-md-2
         %span
           = url.request_count
