footer in place in correct spot

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,5 +13,6 @@
       = render partial: 'layouts/header'
     .main.text-center
       = yield
+    .footerfix
     %footer
       = render partial: 'layouts/footer'
