--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -1,3 +1,9 @@
+html,body {
+  height:100%;
+  width: 100%;
+}
+
+
 // navbar
 
 .nav-link {
@@ -14,21 +20,22 @@
 }
 
 // footer
+.footerfix {
+  height:4rem;
+}
 
-.footer {
+footer {
+  color: #0275d8;
+  position: fixed;
+  right: 0;
   bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-
+  left: 0;
+  padding: 1rem;
+  text-align: center;
+  background-color: white;
 }
 
 // homepage
-html,body {
-  height:100%;
-  width: 100%;
-}
-
 .main {
   height: 100%;
   width: 100%;
@@ -60,6 +67,7 @@ html,body {
 
 .container {
   margin-top: 5%;
+  margin-bottom: 5%;
 }
 
 .url {
