--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,9 +1,8 @@
 .footer
   .row
     .col-md-2.offset-md-3.text-center
-      %span Created By:
       %span
-        = link_to 'John Maguire', 'https://www.johnmaguiredeveloper.com'
+        = link_to 'Created by: John Maguire', 'https://www.johnmaguiredeveloper.com'
     .col-md-1.text-center
       %a{:href => 'https://github.com/jm96441n'}
         %i.fa.fa-github.fa-2x
