--- a/app/views/urls/new.html.haml
+++ b/app/views/urls/new.html.haml
@@ -5,9 +5,12 @@
 
       = form_for @url, class: 'form-group' do |f|
         %p
-          = f.text_field :original, class: 'form-control', required: true
+          = f.url_field :original, class: 'form-control', required: true
         %p
           = f.submit 'Shorten My Url!', class: 'btn btn-primary', id: 'create-button'
     %a{:href => "#", 'data-toggle' => 'collapse'}
     .collapse#shortened-container
       %p#shortened
+      %a{:href => "#", onclick: 'copyToClipboard(event)'}
+        Copy
+        %i.fa.fa-copy{'aria-hidden': true}
