--- a/app/assets/stylesheets/urls.scss
+++ b/app/assets/stylesheets/urls.scss
@@ -48,14 +48,28 @@ footer {
   background-size: 100% 100%;
 }
 
-#url-form {
-  padding-top: 50%;
+@media only screen and (min-width : 770px) {
+  #url-form {
+    padding-top: 50%;
+  }
+  .form-control {
+    width: 75%;
+    margin: auto;
+  }
 }
 
-.form-control {
-  width: 75%;
-  margin: auto;
+@media only screen and (max-width : 770px) {
+  #url-form {
+    padding-top: 20%;
+  }
+  .form-control {
+    width: 50%;
+    margin: auto;
+  }
 }
+
+
+
 
 #shortened-container {
   background-color: white;
