--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,7 @@
     = csrf_meta_tags
     %link{ type:  'text/css', rel: 'stylesheet', href: 'https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/css/tether.min.css' }
     %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js'}
+    %script{ src: 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.1/popper.min.js' }
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
