--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -1,6 +1,6 @@
 .footer
   .row
-    .col-md-2.offset-md-3.text-center
+    .col-md-2.footer-first
       %span
         = link_to 'Created by: John Maguire', 'https://www.johnmaguiredeveloper.com'
     .col-md-1.text-center
